--- a/appz.yml
+++ b/appz.yml
@@ -1,18 +1,18 @@
 app:
     name: Hello Node
     code: hellonode
-    notify: appzdev@cloudbourne.co
+    notify: aborra@ecloudcontrol.com
 
 build:
-    version: 0.1
+    version: 10.4
     env: DEV
     build_file: none
     output_files: output/*.zip
-    image_template: node-14.16
+    image_template: npmppt-10.4
 
 
 deploy:
-    context: alpha/DEV
+    context: anushab7/DEV
     replicas: 1
     port:
     - 8080
@@ -20,7 +20,4 @@ deploy:
 
 
 properties:
-    page_title: "React-bootstrap + nodejs-express App"
-    ##site_url: "https://hellonodejs.appzclient.com/"
-    revision: 18
-    page_color: Blue
+    revision: 12
